Thu Oct 09 00:00:40 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	  - Fixed a problem when removing buddies. They didn't always
	    leave the list.

Wed Oct 08 23:41:55 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - Added support for adding and removing buddies from conversations.

Wed Oct 08 23:38:20 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	  - Fixed a crash when loading a buddy list that has Show Offline
	    Buddies set. I'm glad that didn't slip into release.

Wed Oct 08 21:55:07 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - The Get Information button works in IMs.

Wed Oct 08 21:30:55 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAction.h:
	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	  - Added protocol-specific actions in the buddy context-sensitive menu.

Wed Oct 08 20:44:02 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAction.h:
	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	* gaim.pro:
	  - Added QGaimAction, which is like QAction but can pass user data
	    to the activated() slot.
	  - Added a list of buddies in a contact's context-sensitive menu.

Wed Oct 08 18:37:04 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	  - Added support for aliasing buddies.

Wed Oct 08 00:33:11 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	  - Chats can now be auto-joined on connect.

Wed Oct 08 00:27:42 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	  - Added the Alias Chat dialog.

Tue Oct 07 22:43:47 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	* src/QGaimBListWindow.h:
	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h: