@@ -1,3 +1,10 @@
+Thu Oct 09 00:19:52 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimConvWindow.cpp:
+	* src/QGaimConvWindow.h:
+	  - The Send button is disabled when the text field is empty in
+	    conversation windows.
+
 Thu Oct 09 00:00:40 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimBuddyList.cpp:
